k8s/ratings/ratings-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-dev-ratings
  namespace: bookinfo-dev
  labels:
    app: bookinfo-dev-ratings
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookinfo-dev-ratings
  template:
    metadata:
      labels:
        app: bookinfo-dev-ratings
    spec:
      containers:
        - name: bookinfo-dev-ratings
          # Docker Registry
          image: asia.gcr.io/[PROJECT_ID]/bookinfo-ratings:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
              name: web-port
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 9080
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /health
              port: 9080
              scheme: HTTP
      imagePullSecrets:
        - name: registry-bookinfo
