k8s/ratings/ratings-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-dev-ratings
  namespace: bookinfo-dev
spec:
  type: ClusterIP
  ports:
  - port: 9080
  selector:
    app: bookinfo-dev-ratings
