k8s/ratings/ratings-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: bookinfo-dev-ratings
  namespace: bookinfo-dev
spec:
  rules:
  - host: «hostname_or_ingress_ip»
    http:
      paths:
      - path: /ratings(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: bookinfo-dev-ratings
            port:
              number: 9080
